# ZTP

./: README.md  docker-compose.yml  package-lock.json
Client/: Dockerfile  angular.json  package-lock.json  package.json
Client/src/: environment.ts  index.html  styles.scss
Client/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
Client/src/app/auth/: index.ts
Client/src/app/auth/login-component/: login.component.html  login.component.scss  login.component.ts
Client/src/app/auth/register-component/: register.component.html  (+2 more)
Client/src/app/core/: index.ts
Client/src/app/services/: auth.interceptor.ts  auth.service.ts  chat.service.ts  flat.service.ts  index.ts  notification.service.ts  user.service.ts
Client/src/app/store/: app.state.ts
Client/src/app/utils/: index.ts  jwt.util.ts
REST_API/: Dockerfile  pom.xml
REST_API/src/main/resources/: application.properties  application.yml
gateway/: Dockerfile  docker-compose.yml  pyproject.toml
gateway/gateway/: main.py
gateway/gateway/auth/: jwt.py  router.py
gateway/gateway/core/: config.py  logging.py  logging_setup.py
gateway/gateway/middleware/: rate_limit.py  request_id.py
gateway/gateway/proxy/: chat_router.py  rest_router.py  router.py  services.py  users_router.py
gateway/gateway/utils/: redis.py
users/: .gitignore  Dockerfile  pyproject.toml
users/alembic/: env.py
users/alembic/versions/: 034c7f9f718e_init.py
users/scripts/: start.sh
users/users/: database.py  main.py  models.py  router.py  schemas.py
users/users/core/: auth.py  config.py  security.py
users/users/repository/: base.py  user.py
users/users/routers/: messages.py  router.py
users/users/utils/: connection_manager.py  utils.py
(+108 files in other folders)
