[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.1",
]
